# taocp-rust

./: .gitignore  Cargo.toml  Makefile  README.md  bool_formulas.rs  dancing_links.rs  ex-sec01-03-02.rs  ex-sec02-01.rs  exact_cover.rs  langford.rs  langford2.rs  latin-squares.rs  llist.rs  llist2.rs  llist3.rs  medians.rs  sets.rs  slist.rs  util.rs
src/: bool_formulas.rs  dancing_links.rs  ex-sec02-01.rs  exact_cover.rs  graphs.rs  lib.md  lib.rs  llist.rs  n_tuples.rs  taocp.md  words.rs
src/generators/: mod.md  n_tuples.md
