[package]

name = "taocp-rust"
version = "0.0.1"
authors = ["Felix S. Klock II <pnkfelix@pnkfx.org>"]

build = "taocp-build.rs"

[dependencies]
log = "*"

[features]
benchmarking = [] # feature has no explicit dependencies

# The preprocessor is the `tango` crate, so we need to add that
# to the build-dependencies.

[build-dependencies.tango]
git = "https://github.com/pnkfelix/tango"

# Since the lib may be a tango file stored in `src/lib.md`, we need to
# explicitly specify that this is a library project with a `[lib]`
# section, which then requires an explicit name.

[lib]
name = "lib"

[[bin]]
name = "taocp"
path = "src/taocp.rs"
